--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "sweetalert2": "^11.10.6"
   },
   "devDependencies": {
     "@types/node": "^20",
